[gd_scene load_steps=10 format=3 uid="uid://bp65iocf16xjy"]

[ext_resource type="Script" path="res://Scripts/circuit_select.gd" id="1_irpks"]
[ext_resource type="Texture2D" uid="uid://cttcjfbbcs5f6" path="res://Assets/Stuff Ill Rename Later/GT NZ Championships.jpg" id="2_jncgu"]
[ext_resource type="Texture2D" uid="uid://8yuy4pmyup2g" path="res://Assets/circuitgallery/silverstone.png" id="2_opdgo"]
[ext_resource type="Texture2D" uid="uid://d1dbdrxj6vqel" path="res://Assets/circuitgallery/interlagos.png" id="3_2pmrt"]
[ext_resource type="Shader" path="res://Assets/main_menu.gdshader" id="3_j237y"]
[ext_resource type="Texture2D" uid="uid://4fgjn110d0jy" path="res://Assets/circuitgallery/spa-francorchamps.png" id="4_5ill8"]
[ext_resource type="Texture2D" uid="uid://cbhg657ynreii" path="res://Assets/circuitgallery/nordschliefe.png" id="5_fs2jq"]

[sub_resource type="FontFile" id="FontFile_fpdc8"]
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e0g3q"]
shader = ExtResource("3_j237y")

[node name="circuit_select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_irpks")

[node name="Title at the Top" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.159
offset_bottom = 23.968
grow_horizontal = 2
color = Color(0.031307, 0.818269, 0.458237, 1)

[node name="Text" type="Label" parent="Title at the Top"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "ùìñùì£ ùì°ùì™ùì¨ùì≤ùì∑ùì∞ ùìíùìµùìæùì´
Home of the Champions"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 160

[node name="topbg" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.207
anchor_right = 0.999
anchor_bottom = 0.903
offset_left = -1.0
offset_top = -0.136017
offset_right = 0.151855
offset_bottom = -0.144043
grow_horizontal = 2
grow_vertical = 2

[node name="color" type="ColorRect" parent="topbg"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.832375, 0.783384, 0.735637, 1)

[node name="circuits" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.002
anchor_top = 0.218
anchor_right = 0.997
anchor_bottom = 0.889
offset_left = -0.304
offset_top = -0.264008
offset_right = 0.455933
offset_bottom = -0.0720215
grow_horizontal = 2
grow_vertical = 2

[node name="silverstone" type="Button" parent="circuits"]
visibility_layer = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_fpdc8")
theme_override_font_sizes/font_size = 20
text = "Silverstone"
icon = ExtResource("2_opdgo")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="interlagos" type="Button" parent="circuits"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_fpdc8")
theme_override_font_sizes/font_size = 20
text = "Interlagos"
icon = ExtResource("3_2pmrt")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="spa-francorchamps" type="Button" parent="circuits"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_fpdc8")
theme_override_font_sizes/font_size = 20
text = "Spa-Francorchamps"
icon = ExtResource("4_5ill8")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="bahrain" type="Button" parent="circuits"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_fpdc8")
theme_override_font_sizes/font_size = 20
text = "Nurburgring-Nordschliefe"
icon = ExtResource("5_fs2jq")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="backbox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.895
anchor_top = 0.904
anchor_right = 0.978
anchor_bottom = 0.966
offset_left = -0.0400391
offset_top = 0.207947
offset_right = 0.343994
offset_bottom = 0.0319824

[node name="BackButton" type="Button" parent="backbox"]
layout_mode = 2
size_flags_horizontal = 3
text = " "

[node name="BackText" type="Label" parent="backbox/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.998
offset_left = -1.0
offset_bottom = 0.297974
mouse_filter = 2
texture = ExtResource("2_jncgu")
expand_mode = 2

[node name="Backdrop Blur" type="Panel" parent="Background"]
modulate = Color(0.79315, 0.180724, 0.769873, 1)
material = SubResource("ShaderMaterial_e0g3q")
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_bottom = 1.00012
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="circuits/silverstone" to="." method="_on_silverstone_pressed"]
[connection signal="pressed" from="circuits/interlagos" to="." method="_on_interlagos_pressed"]
[connection signal="pressed" from="circuits/spa-francorchamps" to="." method="_on_spafrancorchamps_pressed"]
[connection signal="pressed" from="circuits/bahrain" to="." method="_on_nordschliefe_pressed"]
[connection signal="pressed" from="backbox/BackButton" to="." method="_on_back_button_pressed"]
